--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -37,7 +37,7 @@ jobs:
         uses: actions/setup-node@v4.1.0
         with:
           node-version: 18
-      - run: npm i
+      - run: npm i --force
       - run: npm run build
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3.0.1
