--- a/package.json
+++ b/package.json
@@ -1,51 +1,55 @@
 {
   "name": "zerodhaalgotrade",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
   "dependencies": {
     "ajv": "^8.17.1",
+    "axios": "^1.6.7",
+    "cors": "^2.8.5",
     "cra-template": "1.2.0",
     "date-fns": "^3.3.1",
+    "dotenv": "^16.4.5",
+    "express": "^4.18.3",
     "kiteconnect": "^4.1.0",
     "lucide-react": "^0.344.0",
     "querystring": "^0.2.1",
     "querystring-es3": "^0.2.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-router-dom": "^6.22.3",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "recharts": "^2.12.2",
     "web-vitals": "^4.2.4",
+    "winston": "^3.12.0",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.18",
+    "concurrently": "^8.2.2",
     "eslint": "^9.9.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
     "globals": "^15.9.0",
+    "nodemon": "^3.1.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.5.3",
+    "typescript": "^4.5.4",
     "typescript-eslint": "^8.3.0",
     "vite": "^5.4.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "concurrently \"node server/index.js\" \"react-scripts start\"",
+    "start-react": "react-scripts start",
+    "start-node": "node server/index.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
+  "homepage": ".",
   "browserslist": {
     "production": [
       ">0.2%",
@@ -57,6 +61,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "homepage": "."
+  }
 }
